--- a/Meu site.html
+++ b/Meu site.html
@@ -25,6 +25,8 @@
 <body>
   <a href="Untitled-1.html">Descrição dos Produtos</a>
   <a href="Untitled-2.html">Saiba Mais sobre o Criador</a>
-  <marquee>Criado por Endryo Pitombeira Belmino</marquee>
+  <footer>
+        Desenvolvido por <a href="sobre.html">Endryo Pitombeira</a>
+    </footer>
 </body>
 </html>
