--- a/Meu site.html
+++ b/Meu site.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <meta charset="UTF-8">
   <link rel="shortcut icon" href="kapbum.ico"
   type="image/x-icon">
   <title>Kapbum</title>
   <meta charset="UTF-8">
 </head>
+    <a href="tipo-de__pessoa.html">Novo Login</a>
+    <a href="usuario.html">Login</a>
+    <a href="cadastrar produto.html">Cadastro de produto</a>
     <header>
         <h1>Kapbum</h1>
         <li>
@@ -23,10 +27,11 @@
         </li>
     </header>
 <body>
-  <a href="Untitled-1.html">Descrição dos Produtos</a>
-  <a href="Untitled-2.html">Saiba Mais sobre o Criador</a>
+  <a href="Descrição.html">Descrição dos Produtos</a>
+  <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a>
   <footer>
         Desenvolvido por <a href="sobre.html">Endryo Pitombeira</a>
     </footer>
 </body>
 </html>
+
