--- a/cadastrar produto.html
+++ b/cadastrar produto.html
@@ -3,6 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="kapbum.ico"
+    type="image/x-icon">
+    <title>Kapbum</title>
     <meta http-equiv="X-UA-Compstible" content=IE-edge>
     <meta name="viewport" content="width-device-width, initial-scale
     =1.0">
@@ -32,14 +36,21 @@
             <label for="id name">Valor do Produto</label>
             <input type="text" name="val_prod"/>    
         </p>
+        <p>
+        <label>
+            <span>
+               Descrição
+            </span>
+            <textarea name="paragrafo"></textarea>
+        </label>
+        </p>
         <button>Enviar</button>
         <button type="reset">Limpar</button>
-    </form>
-    <a href="Meu Site.html">Pagina Inicial</a>
+    <a href="index.html">Pagina Inicial</a>
     <a href="Descrição.html">Descrição dos Produtos</a>
-    <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a>
+    <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a></p>
    <footer>
-        Desenvolvido por <a href="sobre.html">Endryo Pitombeira</a>
+        Desenvolvido por <a href="Saiba mais.html">Endryo Pitombeira</a>
     </footer>
 </body>
 </html>     
