Saiba_mais.html

--- a/Saiba mais.html
+++ b/Saiba mais.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <title>Kapbum</title>
   <meta charset="UTF-8">
-</head>
+  <link rel="stylesheet" href="estilos.css">
   <link rel="shortcut icon" href="kapbum.ico"
   type="image/x-icon">
+  <title>Kapbum</title>
+  <link rel="shortcut icon" type="image/x-icon">
+</head>
+  <link rel="shortcut icon" href="kapbum.ico"
+        type="image/x-icon">
     <header>
+      <a href="tipo-de__pessoa.html">Novo Login</a>
+      <a href="Banco de Dados.html">Login</a>
+      <a Login input type="text" size="20" maxlength="15"></a>
+      <a Senha input type="password" size="10"maxlength="8"></a>
       <h1>Kapbum</h1>
       <li>
         <button>Buscar</button>
@@ -14,7 +22,7 @@
         <button>Entrar</button>
       </li>
       <li>
-        <button>início</button>
+        <link rel="button" href="index.html"> início
         <button>PC Gamer</button>
         <button>Hardware</button>
         <button>Periféricos</button>
@@ -26,8 +34,10 @@
   <h1>
     Olá me chamo Endryo Pitombeira Belmino, e criei esse site na ideia de vender materiais de T.I para agradar mais pessoas, espero que você tenha tido uma boa experiência!
   </h1>
-  <a href="Meu Site.html">Pagina Inicial</a>
-  <a href="Untitled-1.html">Descrtição do Produto</a>
-  <marquee>Criado por Endryo Pitombeira Belmino</marquee>
+  <a href="index.html">Pagina Inicial</a>
+  <a href="Descrição.html">Descrição do Produto</a>
+  <footer>
+    Desenvolvido por <a href="sobre.html">Endryo Pitombeira</a>
+</footer>
 </body>
 </html>
