--- a/Descrição.html
+++ b/Descrição.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+  <meta charset="UTF-8">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="kapbum.ico"
+    type="image/x-icon">
+    <title>Kapbum</title>
   <link rel="shortcut icon" href="kapbum.ico"
   type="image/x-icon">
   <title>Kapbum</title>
@@ -30,8 +35,10 @@
     <button>Avaliações de Usuario</button>
   </li>
 
-  <a href="Meu Site.html">Pagina Inicial</a>
-  <a href="Untitled-2.html">Saiba Mais sobre o Criador</a>
-  <marquee>Criado por Endryo Pitombeira Belmino</marquee>
+  <a href="index.html">Pagina Inicial</a>
+  <a href="Saiba mais.html">Saiba Mais sobre o Criador</a>
+  <footer>
+    Desenvolvido por <a href="Saiba mais.html">Endryo Pitombeira</a>
+</footer>
 </body>
 </html>
