--- a/Meu site.html
+++ b/Meu site.html
@@ -2,35 +2,36 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-  <link rel="shortcut icon" href="kapbum.ico"
-  type="image/x-icon">
-  <title>Kapbum</title>
-  <meta charset="UTF-8">
+    <link rel="stylesheet" href="estilos.css">
+    <link rel="shortcut icon" href="kapbum.ico"
+    type="image/x-icon">
+    <title>Kapbum</title>
+    <meta charset="UTF-8">
 </head>
-    <a href="tipo-de__pessoa.html">Novo Login</a>
-    <a href="usuario.html">Login</a>
-    <a href="cadastrar produto.html">Cadastro de produto</a>
     <header>
+        <a href="tipo-de__pessoa.html">Novo Login</a>
+        <a href="usuario.html">Login</a>
+        <a href="cadastrar produto.html">Cadastro de produto</a>
         <h1>Kapbum</h1>
-        <li>
+        <section>
             <button>Buscar</button>
             <button>Nossa Loja</button>
             <button>Entrar</button>
-        </li>
-        <img src="pagina.jpg">
-        <li>
-            <button>início</button>
+        </sections>
+        <div><img src="pagina.jpg"></div>
+        <section>
+            <button href="index.html">início</button>
             <button>PC Gamer</button>
             <button>Hardware</button>
             <button>Periféricos</button>
             <button>Acessórios</button>
-        </li>
+        </section>
     </header>
 <body>
   <a href="Descrição.html">Descrição dos Produtos</a>
   <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a>
   <footer>
-        Desenvolvido por <a href="sobre.html">Endryo Pitombeira</a>
+        Desenvolvido por <a href="Saiba_mais.html">Endryo Pitombeira</a>
     </footer>
 </body>
 </html>
