--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a href="tipo-de__pessoa.html">Novo Login</a>
         <a href="usuario.html">Login</a>
         <a href="cadastrar produto.html">Cadastro de produto</a>
+        <a href="index2.html">Inicio 2</a>
         <h1>Kapbum</h1>
         <section>
             <button>Buscar</button>
