--- a/index.html
+++ b/index.html
@@ -8,32 +8,39 @@
     <title>Kapbum</title>
     <meta charset="UTF-8">
 </head>
-    <header>
-        <a href="tipo-de__pessoa.html">Novo Login</a>
-        <a href="usuario.html">Login</a>
-        <a href="cadastrar produto.html">Cadastro de produto</a>
-        <a href="index2.html">Inicio 2</a>
-        <h1>Kapbum</h1>
-        <section>
-            <button>Buscar</button>
-            <button>Nossa Loja</button>
-            <button>Entrar</button>
-        </sections>
-        <div><img src="pagina.jpg"></div>
-        <section>
-            <button href="index.html">início</button>
-            <button>PC Gamer</button>
-            <button>Hardware</button>
-            <button>Periféricos</button>
-            <button>Acessórios</button>
-        </section>
-    </header>
 <body>
-  <a href="Descrição.html">Descrição dos Produtos</a>
-  <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a>
-  <footer>
+    <header>
+            <ul>
+                <li><button>Buscar</button></li>
+                <li><button>Nossa Loja</button></li>
+                <li><button>Entrar</button></li>
+                <li><a href="index2.html">pagina 2</a></li>
+                </sections>
+            </ul>
+        <div><img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\pagina.jpg"></div>
+            <ul>
+                <section>
+                    <nav>
+                        <li><button link href="index2.html">início</button></li>
+                        <li><button>PC Gamer</button></li>
+                        <li><button>Hardware</button></li>
+                        <li><button>Periféricos</button></li>
+                        <li><button>Acessórios</button></li>
+                    </nav>
+    </header>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque varius dapibus lectus. Vivamus nec vestibulum ipsum, non dignissim felis. Quisque consectetur dolor sit amet euismod tincidunt. Aliquam erat volutpat. Vivamus malesuada tortor id tellus consectetur, in sagittis lorem tincidunt. Ut venenatis convallis nisi, non ornare tellus. Nunc volutpat, turpis consequat feugiat dignissim, turpis ligula viverra mauris, eu aliquam dolor nisi sit amet sem. Suspendisse sed bibendum velit. Ut eget eros at velit suscipit condimentum eget scelerisque quam. Fusce congue pulvinar euismod. Vivamus eros ipsum, rhoncus eget luctus ut, dignissim et nibh. Fusce leo odio, consectetur sed dolor at, ullamcorper consequat risus. Ut fermentum rhoncus elementum.   
+    </p>
+    <p>
+        Nulla et felis orci. Proin lobortis faucibus ante, id elementum elit scelerisque ac. Fusce ornare et velit quis semper. Integer interdum nunc ac pharetra scelerisque. Etiam in laoreet risus, nec egestas urna. Aliquam nec urna lacus. Morbi molestie nibh non lectus iaculis fringilla. Vivamus interdum porttitor orci in vulputate. Maecenas quis justo vitae eros efficitur feugiat convallis quis diam.
+    </p>
+    <img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\ac2479289c4998883d9af5240acbf032.jpeg">
+    <img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\gabinete1.jpg">
+  <div><a href="Descrição.html">Descrição dos Produtos</a>
+  <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a></div>
+<footer>
         Desenvolvido por <a href="Saiba_mais.html">Endryo Pitombeira</a>
-    </footer>
+</footer>
 </body>
 </html>
 
