--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <p>
         Nulla et felis orci. Proin lobortis faucibus ante, id elementum elit scelerisque ac. Fusce ornare et velit quis semper. Integer interdum nunc ac pharetra scelerisque. Etiam in laoreet risus, nec egestas urna. Aliquam nec urna lacus. Morbi molestie nibh non lectus iaculis fringilla. Vivamus interdum porttitor orci in vulputate. Maecenas quis justo vitae eros efficitur feugiat convallis quis diam.
     </p>
-    <img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\ac2479289c4998883d9af5240acbf032.jpeg">
-    <img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\gabinete1.jpg">
-  <div><a href="Descrição.html">Descrição dos Produtos</a>
+<section>
+        <img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\ac2479289c4998883d9af5240acbf032.jpeg">
+        <img src="C:\Users\User\Desktop\Desenvolvimento Web\imagens\gabinete1.jpg">
+    </section>
+    <div><a href="Descrição.html">Descrição dos Produtos</a>
   <a href="Saiba_mais.html">Saiba Mais sobre o Criador</a></div>
 <footer>
         Desenvolvido por <a href="Saiba_mais.html">Endryo Pitombeira</a>
